force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__AgingInStockStartEnd__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AgingInStockStartEnd__c</fullName>
    <formula>clofor_com_cfs__StockCountEndDate__c - clofor_com_cfs__StockCountStartDate__c</formula>
    <label>AGING IN STOCK FROM START TO END</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>