force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__AgingInStockTillToday__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AgingInStockTillToday__c</fullName>
    <formula>TODAY()  -  clofor_com_cfs__StockCountStartDate__c</formula>
    <label>AGING IN STOCK TILL TODAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>