force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__CargoLifeCycle__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoLifeCycle__c</fullName>
    <formula>text( clofor_com_cfs__WOSLineID__r.clofor_com_cfs__Cargo__r.clofor_com_cfs__CargoLifeCycle__c)</formula>
    <label>Cargo Life Cycle</label>
    <type>Text</type>
</CustomField>