force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__CargoName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoName__c</fullName>
    <formula>clofor_com_cfs__WOSLineID__r.clofor_com_cfs__Cargo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Name</label>
    <type>Text</type>
</CustomField>