force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__CargoQRCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoQRCodeLabel__c</fullName>
    <formula>clofor_com_cfs__WOSLineID__r.clofor_com_cfs__Cargo__r.clofor_com_cfs__QrCodeImage__c</formula>
    <label>CARGO QR CODE LABEL</label>
    <type>Text</type>
</CustomField>