force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeUnit__c</fullName>
    <formula>TEXT(clofor_com_cfs__StockLocator__r.clofor_com_cfs__ChargeType__c)</formula>
    <label>CHARGE TYPE</label>
    <type>Text</type>
</CustomField>