force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__Customer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>STOCK (CUSTOMER)</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>