force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__DataPull__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DataPull__c</fullName>
    <inlineHelpText>If want to automatic data updates from other process 
-Select the process want to be copied from
*Automatic in Data Updates Method must be selected to automatic data updates</inlineHelpText>
    <label>DATA PULL</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__DataUpdateMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DataPull</valueSetName>
    </valueSet>
</CustomField>