force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__FastSlowClassification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FastSlowClassification__c</fullName>
    <formula>Text(clofor_com_cfs__StockLocator__r.clofor_com_cfs__FastSlowClassification__c)</formula>
    <label>FAST/SLOW CLASSIFICATION</label>
    <type>Text</type>
</CustomField>