force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossWeight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GROSS WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>