force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__LocatorActualAvailableCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorActualAvailableCapacityCBM__c</fullName>
    <formula>clofor_com_cfs__StockLocator__r.clofor_com_cfs__ActualAvailableCapacityCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(CBM) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>