force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__LocatorActualAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorActualAvailableCapacityKG__c</fullName>
    <formula>clofor_com_cfs__StockLocator__r.clofor_com_cfs__ActualAvailableCapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(KG) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>