force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__LocatorCode_del__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorCode_del__c</fullName>
    <formula>clofor_com_cfs__StockLocator__r.clofor_com_cfs__LocatorCode__c</formula>
    <label>LOCATOR CODE</label>
    <type>Text</type>
</CustomField>