force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__LOTNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LOTNumber__c</fullName>
    <label>LOT NUMBER(Old)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>