force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__LotNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LotNumberFormula__c</fullName>
    <formula>clofor_com_cfs__WOSLineID__r.clofor_com_cfs__Cargo__r.clofor_com_cfs__LotNumber__c</formula>
    <label>Lot Number</label>
    <type>Text</type>
</CustomField>