force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__ManufacturedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ManufacturedDate__c</fullName>
    <label>MANUFACTURED DATE(Old)</label>
    <type>Date</type>
</CustomField>