force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__MaxCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxCapacityKG__c</fullName>
    <formula>clofor_com_cfs__StockLocator__r.clofor_com_cfs__CapacityKG__c</formula>
    <label>MAX CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>