force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__PurchasingOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingOrderNumber__c</fullName>
    <label>PURCHASING ORDER NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>