force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__SKU__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SKU__c</fullName>
    <label>SKU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SKU</valueSetName>
    </valueSet>
</CustomField>