force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__SKUNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SKUNumber__c</fullName>
    <label>SKU NUMBER(Old)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>