force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__StockCountEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockCountEndDate__c</fullName>
    <label>STOCK COUNT END DATE</label>
    <type>Date</type>
</CustomField>