force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__StockInCounting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockInCounting__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Automatically counting when Goods are counted in Stock Inventory</inlineHelpText>
    <label>STOCK-IN COUNTING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>