force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__StockLocator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockLocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STOCK LOCATOR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__LOCATOR__c.clofor_com_cfs__LocationAreaType__c</field>
            <operation>equals</operation>
            <value>Storage Area, Storage Area</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK_LIST</relationshipName>
    <type>Lookup</type>
</CustomField>