force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__StockStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockStatus__c</fullName>
    <label>STOCK STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__StockStatus</valueSetName>
    </valueSet>
</CustomField>