force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__StockWarehouseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StockWarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STOCK WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>STOCK (WAREHOUSE ID)</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>