force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__Tenant__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tenant__c</fullName>
    <formula>clofor_com_cfs__StockLocator__r.clofor_com_cfs__Tenant__r.Name</formula>
    <label>TENANT</label>
    <type>Text</type>
</CustomField>