force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__TotalQuantityInStock__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalQuantityInStock__c</fullName>
    <label>TOTAL QUANTITY IN STOCK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>