force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WORK ORDER ID</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>