force-app/main/default/objects/clofor_com_cfs__Stock__c/fields/clofor_com_cfs__WOSLineID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WOSLineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>W/O/S LINE ID</label>
    <referenceTo>clofor_com_cfs__WOSLineItem__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>StockWOSLineID</relationshipName>
    <type>Lookup</type>
</CustomField>