force-app/main/default/objects/clofor_com_cfs__Stock__c/recordTypes/clofor_com_cfs__StockIn.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__StockIn</fullName>
    <active>true</active>
    <description>Record Type when Goods increase</description>
    <label>Stock-In</label>
</RecordType>