force-app/main/default/objects/clofor_com_cfs__Stock__c/recordTypes/clofor_com_cfs__StockOut.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__StockOut</fullName>
    <active>true</active>
    <description>Record Type when Number of Goods decrease</description>
    <label>Stock-Out</label>
</RecordType>