force-app/main/default/objects/clofor_com_cfs__Stock__c/validationRules/clofor_com_cfs__GrossWeightWithMaxCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__GrossWeightWithMaxCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockIn&apos;,
 clofor_com_cfs__GrossWeight__c &gt;  clofor_com_cfs__MaxCapacityKG__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__GrossWeight__c</errorDisplayField>
    <errorMessage>The Gross Weight of stock in can not greater than Max Capacity KG.</errorMessage>
</ValidationRule>