force-app/main/default/objects/clofor_com_cfs__Stock__c/validationRules/clofor_com_cfs__GrossWeightWithOccupiedCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__GrossWeightWithOccupiedCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockOut&apos;,
 clofor_com_cfs__GrossWeight__c &gt;   clofor_com_cfs__StockLocator__r.clofor_com_cfs__CurrentOccupiedCapacityKG__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__GrossWeight__c</errorDisplayField>
    <errorMessage>The Gross Weight of stock out can not greater than Current Occupied Capacity KG of Locator.</errorMessage>
</ValidationRule>