force-app/main/default/objects/clofor_com_cfs__Stock__c/validationRules/clofor_com_cfs__MeasurementWithMaxCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__MeasurementWithMaxCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockIn&apos;,
clofor_com_cfs__Measurement__c &gt;  clofor_com_cfs__MaxCapacityCBM__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Measurement__c</errorDisplayField>
    <errorMessage>The Measurement stock in can not greater than Max Capacity CBM.</errorMessage>
</ValidationRule>