force-app/main/default/objects/clofor_com_cfs__Stock__c/validationRules/clofor_com_cfs__MesurementWithOccupiedCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__MesurementWithOccupiedCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockOut&apos;,
  clofor_com_cfs__Measurement__c &gt;   clofor_com_cfs__StockLocator__r.clofor_com_cfs__CurrentOccupiedCapacityCBM__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Measurement__c</errorDisplayField>
    <errorMessage>The Measurement of stock out can not greater than Current Occupied Capacity CBM of Locator.</errorMessage>
</ValidationRule>