force-app/main/default/objects/clofor_com_cfs__Stock__c/listViews/clofor_com_cfs__LocatorSearch.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__LocatorSearch</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__StockStatus__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__StockLocator__c</columns>
    <columns>clofor_com_cfs__LocatorCode_del__c</columns>
    <columns>clofor_com_cfs__StockWarehouseID__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__ProductName__c</columns>
    <columns>clofor_com_cfs__GoodsOwner__c</columns>
    <columns>clofor_com_cfs__Tenant__c</columns>
    <columns>clofor_com_cfs__Buyer__c</columns>
    <columns>clofor_com_cfs__SKU__c</columns>
    <columns>clofor_com_cfs__ChargeUnit__c</columns>
    <columns>clofor_com_cfs__LocatorActualAvailableCapacityCBM__c</columns>
    <columns>clofor_com_cfs__LocatorActualAvailableCapacityKG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__StockLocator__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__StockWarehouseID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__ProductID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__GoodsOwner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__Tenant__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__Buyer__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__Supplier__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__SKU__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__ChargeUnit__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__FastSlowClassification__c</field>
        <operation>equals</operation>
    </filters>
    <label>☘LOCATOR SEARCH☘</label>
    <language>en_US</language>
</ListView>