force-app/main/default/objects/clofor_com_cfs__Stock__c/listViews/clofor_com_cfs__Massive_Update_Locator.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Massive_Update_Locator</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__LocatorCode_del__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__ProductName__c</columns>
    <columns>clofor_com_cfs__StockLocator__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clofor_com_cfs__StockLocator__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>clofor_com_cfs__AgingInStockStartEnd__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__Stock__c.clofor_com_cfs__StockIn</value>
    </filters>
    <label>Massive Update Locator</label>
</ListView>