force-app/main/default/objects/clofor_com_cfs__Stock__c/listViews/clofor_com_cfs__StockInbound.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__StockInbound</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WorkOrderID__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__UnitType__c</columns>
    <columns>clofor_com_cfs__StockLocator__c</columns>
    <columns>clofor_com_cfs__LocatorCode_del__c</columns>
    <columns>clofor_com_cfs__StockCountStartDate__c</columns>
    <columns>clofor_com_cfs__StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__Stock__c.clofor_com_cfs__StockIn</value>
    </filters>
    <label>1.Stock-In</label>
</ListView>