force-app/main/default/objects/clofor_com_cfs__Stock__c/listViews/clofor_com_cfs__X4_Completed.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__X4_Completed</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WorkOrderID__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>clofor_com_cfs__Quantity__c</columns>
    <columns>clofor_com_cfs__UnitType__c</columns>
    <columns>clofor_com_cfs__StockCountStartDate__c</columns>
    <columns>clofor_com_cfs__StockLocator__c</columns>
    <columns>clofor_com_cfs__StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__StockStatus__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>4.Completed</label>
    <language>en_US</language>
</ListView>